app/css/app.css
@import url('normalize.css');
@import url('font-awesome.css');

@media only screen and ( max-width: 1345px) {
    .date_meta {
        display: none;
    }
}

*:not(input, .ace) {
    -webkit-touch-callout: none;
    -webkit-user-select: none;
    user-select: none;
}

body *, :not(input) {
    box-sizing: border-box;
}

body section {
    -webkit-animation: fadein 1s;
    animation: fadein 1s;
}

@keyframes fadein {
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

@-webkit-keyframes fadein {
    /* Safari and Chrome */
    from {
        opacity: 0;
    }
    to {
        opacity: 1;
    }
}

*:focus,*:hover {
    outline: none;
    -webkit-transition: all 0.15s ease-in;
    transition: all 0.15s ease-in;
}

::-webkit-scrollbar {
    width: 7px;
    height: 5px;
    background: #555;
}

::-webkit-scrollbar-thumb {
    -webkit-border-radius: 2px;
    background: #f2f2f2;
    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.75);
}

::-webkit-scrollbar-corner {
    background: #fff;
}

html {
    overflow: hidden;
    height: 100%;
    font: 20px/1.231 'trebuchet ms', arial, sans-serif;
}

body {
    display: -webkit-flex;
    margin: 0;
    height: 100%;
    -webkit-user-select: none;
    cursor: default;
}

.clear {
    clear: both;
}

/* float clearing for IE6 */
* html .clearfix {
    overflow: visible;
    height: 1%;
}

/* float clearing for IE7 */
*+html .clearfix {
    min-height: 1%;
}

/* float clearing for everyone else */
.clearfix:after {
    display: block;
    visibility: hidden;
    clear: both;
    height: 0;
    content: ".";
    font-size: 0;
}

.hide {
    display: none !important;
}

.flex {
    display: -webkit-flex;
    -webkit-flex-direction: column;
}

h1 {
    margin: 0;
    padding: 0;
    font-size: 2em;
}

a {
    text-decoration: none;
    cursor: pointer;
    -webkit-transition: all 300ms ease-in-out;
    -moz-transition: all 300ms ease-in-out;
    -ms-transition: all 300ms ease-in-out;
    -o-transition: all 300ms ease-in-out;
    color: #000;
}

h1 a {
    text-decoration: none;
}

aside header,
.main header {
    position: relative;
    padding: 0px 10px;
    text-align: left;
    line-height: 50px;
}

div.toolbox {
    -webkit-user-select: none;
    z-index: 5;
    margin: 0;
    padding: 10px;
    text-align: right;
    font-size: 14px;
    line-height: 14px;
}

div.toolbox span {
    float: left;
    width: 520px;
    text-align: left;
    text-transform: uppercase;
    font-size: 11px;
}

div.toolbox span.toolbtn {
    float: none;
    width: auto;
    text-align: left;
    text-transform: uppercase;
    font-size: 11px;
}

div.toolbox span i {
    padding: 0px 5px;
    border-radius: 2px;
    font-style: normal;
}

div.toolbox a {
    padding: 0px 5px;
    border-radius: 3px;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 11px;
}

.type {
    padding: 2px 8px;
    border-radius: 3px;
    text-decoration: none;
    text-transform: uppercase;
    font-weight: 700;
}

aside {
    -webkit-flex: 0 0 30%;
    height: 100%;
}

aside ul {
    -webkit-flex: 1;
    overflow-y: scroll;
    margin: 0;
    padding: 0px;
    min-height: 0;
    list-style: none;
}

aside ul li {
    position: relative;
}

aside ul li a {
    display: block;
    padding: 10px 20px;
    text-decoration: none;
    text-decoration: none;
    font: 300 16px 'trebuchet ms', arial, sans-serif;
    cursor: pointer;
}

aside ul li a:first-child {
    border-top: none;
}

aside footer,
.main footer {
    padding: 5px;
    font: 300 14px 'trebuchet ms', arial, sans-serif;
}

.main footer {
    text-align: center;
}

aside footer div {
    display: -webkit-flex;
    -webkit-flex-direction: row;
}

aside footer span:first-child {
    -webkit-flex: 1 0 0;
}

.main {
    -webkit-flex: 1;
}

menu {
    -webkit-padding-start: 0px;
}

.main section {
    -webkit-flex: 1;
    overflow-y: scroll;
    padding: 20px;
    min-height: 0;
    font-size: 14px;
}

div.main header .button {
    float: right;
    margin: 10px 0px 0px 5px;
}

div.main header .button i {
    padding: 6px;
    border-radius: 3px;
    text-decoration: none;
    position: relative;
    display: inherit;
}

div.main header a .notify span {
    border: 3px solid #C00;
    position: absolute;
    left: 0;
    color: #FFF;
    font-size: 8px;
    background: #C00;
    top: 0;
    padding: 0;
    text-shadow: none;
    box-shadow: 1px 1px 0px #F2F2F2;
}

div.main img.gravatar {
    top: 10px;
    right: 116px;
    padding: 0px;
    width: 34px;
    border-radius: 3px;
    text-decoration: none;
}

div.comments {
    position: relative;
    z-index: 9;
    overflow-x: auto;
    margin: 0;
    padding: 10px;
    text-align: left;
    font-size: 14px;
    line-height: 14px;
}

div.comments .clicky {
    display: block;
    cursor: pointer;
}

div.comments i {
    float: right;
}

.the-gist {
    margin: 0px 0px 20px 0px;
    padding: 0px;
}

.the-gist pre {
    margin: 0;
    padding: 10px;
}

.the-gist-name {
    position: relative;
    padding: 10px;
}

.the-gist-name a {
    position: relative;
    top: 0px;
    right: -10px;
    display: block;
    float: right;
    width: 38px;
    height: 22px;
    text-align: center;
    text-decoration: none;
    font-size: 20px;
}

.messenger {
    display: none;
    padding: 10px;
    font-size: 14px;
    cursor: pointer;
    position: absolute;
    bottom: 75px;
    z-index: 10;
    right: 20px;
    border-radius: 3px;
    box-shadow: 1px 1px 5px #000;
}

.login .messenger {
    display: none;
    padding: 10px;
    font-size: 14px;
    cursor: pointer;
    position: relative;
    top:0;
    right:inherit;
    margin: 0 auto;
    z-index: 10;
    border-radius: 3px;
    box-shadow: 1px 1px 5px #000;
}

.login .messenger i {
    font-size: 14px;
}

.messenger.info {
    background: #0480BE;

}

.messenger.edit {
    background: goldenrod;
}

.messenger.warn {
    background: #b94a48;
}

.messenger.ok {
    background: #468847;
}
/* ... */

